--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,12 @@ body * {
   }
 }
 
-/*header {
+header {
   height: 45px;
   border-bottom: 1px solid #eee;
 }
 
-header h3 {
+/*header h3 {
   flex: 3;
   margin-left: 30px;
   margin-top: 15px;
