--- a/css/styles.css
+++ b/css/styles.css
@@ -50,14 +50,13 @@ header ul {
   flex: 1;
 }
 
-/*header li{
+header li {
   display: inline-block;
   margin-left: 15px;
   font-size: 0.9rem;
 }
 
-
-article {
+/*article {
   flex-basis: 70%;
   border: 1px solid #F8F8F8;
 }
