--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ aside {
   padding: 10px;
 }
 
-/*footer {
+footer {
   height: 200px;
   background: #888;
   color: #fff;
@@ -75,7 +75,7 @@ aside {
   padding-top: 20px;
 }
 
-
+/*
 
 .article-wrapper {
   width: 90%;
