--- a/css/styles.css
+++ b/css/styles.css
@@ -75,15 +75,13 @@ footer {
   padding-top: 20px;
 }
 
-/*
-
 .article-wrapper {
   width: 90%;
   background: #eee;
   margin: 0 auto;
 }
 
-.home-label {
+/*.home-label {
   border-bottom: 1px #333 solid;
 }
 
