--- a/css/styles.css
+++ b/css/styles.css
@@ -81,11 +81,11 @@ footer {
   margin: 0 auto;
 }
 
-/*.home-label {
+.home-label {
   border-bottom: 1px #333 solid;
 }
 
-.aside-label {
+/*.aside-label {
   width: 90%;
 }
 
