--- a/css/styles.css
+++ b/css/styles.css
@@ -100,14 +100,13 @@ footer {
   font-size: 0.9rem;
 }
 
-/*
 .blog-list-home {
   display: flex;
   flex-direction: row;
   border-bottom: solid 1px #B8B8B8;
 }
 
-.blog-thumbnail {
+/*.blog-thumbnail {
   flex-basis: 30%;
   background: #ccc;
   padding: 15px;
