--- a/css/styles.css
+++ b/css/styles.css
@@ -106,13 +106,13 @@ footer {
   border-bottom: solid 1px #B8B8B8;
 }
 
-/*.blog-thumbnail {
+.blog-thumbnail {
   flex-basis: 30%;
   background: #ccc;
   padding: 15px;
 }
 
-.thumbnail-frame {
+/*.thumbnail-frame {
   width: 130px;
   background: #eee;
   height: 80px;
