--- a/css/styles.css
+++ b/css/styles.css
@@ -128,12 +128,12 @@ footer {
   padding: 8px;
 }
 
-/*.blog-list-content h4 {
+.blog-list-content h4 {
   font-size: 1.2rem;
   margin: 10px 0;
 }
 
-.aside-content-home {
+/*.aside-content-home {
   padding: 10px;
   line-height: 1.2rem;
   color: #303030;
