--- a/css/styles.css
+++ b/css/styles.css
@@ -133,13 +133,13 @@ footer {
   margin: 10px 0;
 }
 
-/*.aside-content-home {
+.aside-content-home {
   padding: 10px;
   line-height: 1.2rem;
   color: #303030;
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
