--- a/css/styles.css
+++ b/css/styles.css
@@ -139,12 +139,12 @@ footer {
   color: #303030;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
